--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "author": "",
   "license": "ISC",
-   "dependencies": {
+  "dependencies": {
+    "dotenv": "^16.0.3",
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }, "engines": {
+  },
+  "engines": {
     "node": ">=14.6.0"
   }
-
 }
